Changes for sqlite for deployment

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GameStore":"Data Source=/app/data/GameStore.db"
+    "GameStore":"Data Source=./data/GameStore.db"
   }
 }
