Added folder structure for db creation sqlite

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "GameStore":"Data Source=GameStore.db"
+    "GameStore":"Data Source=app/data/GameStore.db"
   }
 }
