--- a/GameStore.Api.csproj
+++ b/GameStore.Api.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="app/" />
+    <Folder Include="app/data/" />
+  </ItemGroup>
+
 </Project>
