Changes for Deploying application on render

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "GameStore":"Data Source=app/data/GameStore.db"
+    "GameStoreString":"Server=dpg-cvjda06r433s73adl7d0-a.singapore-postgres.render.com;Port=5432;Database=gamestoredb;User Id=gamestoredb_user;Password=U4FPMU37zgvd1LmXMqhoJdo4szsXmmbv;SSL Mode=Require;"
   }
 }
