Changes for auth provider implementation for API's

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "GameStoreString":"Server=dpg-cvjda06r433s73adl7d0-a.singapore-postgres.render.com;Port=5432;Database=gamestoredb;User Id=gamestoredb_user;Password=U4FPMU37zgvd1LmXMqhoJdo4szsXmmbv;SSL Mode=Require;"
+  },
+  "Jwt": {
+    "Key": "gamestore_app_authentication_jwt_key",
+    "Issuer": "AuthService"
   }
 }
