Tested changes for games and collections api support

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "GameStoreString":"Server=dpg-cvjda06r433s73adl7d0-a.singapore-postgres.render.com;Port=5432;Database=gamestoredb;User Id=gamestoredb_user;Password=U4FPMU37zgvd1LmXMqhoJdo4szsXmmbv;SSL Mode=Require;"
+    "GameStoreString":"Host=localhost;Port=5432;Database=gamestoredb;User Id=postgres;Password=16115551;SSL Mode=Require;"
   },
   "Jwt": {
     "Key": "gamestore_app_authentication_jwt_key",
